[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Levels.gd" type="Script" id=1]
[ext_resource path="res://assets/Level_Sizes/Level.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[node name="Levels" type="Node2D"]
position = Vector2( 1.82726, 448.164 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Left" type="KinematicBody2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_group_": true
}

[node name="left_sprite" type="Sprite" parent="Left"]
texture = ExtResource( 2 )

[node name="left_collision" type="CollisionShape2D" parent="Left"]
shape = SubResource( 1 )

[node name="Right" type="KinematicBody2D" parent="."]
editor/display_folded = true
position = Vector2( 746.564, 0.0201721 )
__meta__ = {
"_edit_group_": true
}

[node name="right_sprite" type="Sprite" parent="Right"]
texture = ExtResource( 2 )

[node name="right_collision" type="CollisionShape2D" parent="Right"]
shape = SubResource( 2 )

